--- a/reports/mutation/html/index.html
+++ b/reports/mutation/html/index.html
@@ -24,30 +24,30 @@
 <th class="rotate rotate-width-70 text-center" style="width: 70px"><div><span>Total undetected</span></div></th>
 <th class="rotate rotate-width-70 text-center" style="width: 70px"><div><span>Total mutants</span></div></th></tr></thead>
 <tbody><tr><td>All files</td>
-<td><div class="progress"><div class="progress-bar bg-warning" role="progressbar" aria-valuenow="66.67" aria-valuemin="0" aria-valuemax="100" style="width: 66.67%;">66.67
+<td><div class="progress"><div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%;">100.00
 %</div></div></td>
-<th class="text-center text-warning" style="width: 10%">66.67</th>
-<td class="text-center">2</td>
-<td class="text-center">1</td>
+<th class="text-center text-success" style="width: 10%">100.00</th>
+<td class="text-center">3</td>
 <td class="text-center">0</td>
 <td class="text-center">0</td>
 <td class="text-center">0</td>
 <td class="text-center">0</td>
-<th class="text-center">2</th>
-<th class="text-center">1</th>
+<td class="text-center">0</td>
+<th class="text-center">3</th>
+<th class="text-center">0</th>
 <th class="text-center">3</th></tr>
 <tr><td>&nbsp;&nbsp;<a href="sample.ts.html">sample.ts</a></td>
-<td><div class="progress"><div class="progress-bar bg-warning" role="progressbar" aria-valuenow="66.67" aria-valuemin="0" aria-valuemax="100" style="width: 66.67%;">66.67
+<td><div class="progress"><div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%;">100.00
 %</div></div></td>
-<th class="text-center text-warning" style="width: 10%">66.67</th>
-<td class="text-center">2</td>
-<td class="text-center">1</td>
+<th class="text-center text-success" style="width: 10%">100.00</th>
+<td class="text-center">3</td>
 <td class="text-center">0</td>
 <td class="text-center">0</td>
 <td class="text-center">0</td>
 <td class="text-center">0</td>
-<th class="text-center">2</th>
-<th class="text-center">1</th>
+<td class="text-center">0</td>
+<th class="text-center">3</th>
+<th class="text-center">0</th>
 <th class="text-center">3</th></tr></tbody></table></div></div></div></div>
 <footer>Generated with stryker-html-reporter generator. Visit the 
 <a href="https://stryker-mutator.io" target="_blank">Stryker website</a></footer></div>
