--- a/reports/mutation/html/sample.ts.html
+++ b/reports/mutation/html/sample.ts.html
@@ -24,28 +24,25 @@
 <th class="rotate rotate-width-70 text-center" style="width: 70px"><div><span>Total undetected</span></div></th>
 <th class="rotate rotate-width-70 text-center" style="width: 70px"><div><span>Total mutants</span></div></th></tr></thead>
 <tbody><tr><td>sample.ts</td>
-<td><div class="progress"><div class="progress-bar bg-warning" role="progressbar" aria-valuenow="66.67" aria-valuemin="0" aria-valuemax="100" style="width: 66.67%;">66.67
+<td><div class="progress"><div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%;">100.00
 %</div></div></td>
-<th class="text-center text-warning" style="width: 10%">66.67</th>
-<td class="text-center">2</td>
-<td class="text-center">1</td>
+<th class="text-center text-success" style="width: 10%">100.00</th>
+<td class="text-center">3</td>
 <td class="text-center">0</td>
 <td class="text-center">0</td>
 <td class="text-center">0</td>
 <td class="text-center">0</td>
-<th class="text-center">2</th>
-<th class="text-center">1</th>
+<td class="text-center">0</td>
+<th class="text-center">3</th>
+<th class="text-center">0</th>
 <th class="text-center">3</th></tr>
 </tbody></table></div></div>
 <div class="row"><div class="col-lg-7"><div class="row legend"><form class="col-md-12" novalidate="novalidate">
-<div class="form-check form-check-inline"><label class="form-check-label"><input class="form-check-input stryker-display" checked value="2" type="checkbox">
-Survived
- 
-(1)</label></div>
+
 <div class="form-check form-check-inline"><label class="form-check-label"><input class="form-check-input stryker-display" value="1" type="checkbox">
 Killed
  
-(2)</label></div>
+(3)</label></div>
 
 
 
@@ -57,7 +54,7 @@ Killed
  * @return {Boolean} Is the person older or equal to 30?
  */
 export const isOldEnough = ({ age }): boolean =&gt; </span><a href="#" class="stryker-mutant-button" tabindex="0" title="Block" data-content="status: Killed" data-mutant-status-annotation="success" data-mutant-status="1" data-mutant="0"><span class="badge badge-success">0</span></a><span class="badge badge-info stryker-mutant-replacement" hidden="hidden" data-mutant="0">{}</span><span class="stryker-original-code" data-mutant="0"><span class="bg-success-light">{
-  return age </span><a href="#" class="stryker-mutant-button" tabindex="0" title="BinaryExpression" data-content="status: Survived" data-mutant-status-annotation="danger" data-mutant-status="2" data-mutant="1"><span class="badge badge-danger">1</span></a><span class="badge badge-info stryker-mutant-replacement" hidden="hidden" data-mutant="1">&gt;=</span><a href="#" class="stryker-mutant-button" tabindex="0" title="BinaryExpression" data-content="status: Killed" data-mutant-status-annotation="success" data-mutant-status="1" data-mutant="2"><span class="badge badge-success">2</span></a><span class="badge badge-info stryker-mutant-replacement" hidden="hidden" data-mutant="2">&lt;=</span><span class="stryker-original-code" data-mutant="1"><span class="stryker-original-code" data-mutant="2"><span class="bg-danger-light">&gt;</span></span></span><span class="bg-success-light"> 30;
+  return age </span><a href="#" class="stryker-mutant-button" tabindex="0" title="BinaryExpression" data-content="status: Killed" data-mutant-status-annotation="success" data-mutant-status="1" data-mutant="1"><span class="badge badge-success">1</span></a><span class="badge badge-info stryker-mutant-replacement" hidden="hidden" data-mutant="1">&lt;</span><a href="#" class="stryker-mutant-button" tabindex="0" title="BinaryExpression" data-content="status: Killed" data-mutant-status-annotation="success" data-mutant-status="1" data-mutant="2"><span class="badge badge-success">2</span></a><span class="badge badge-info stryker-mutant-replacement" hidden="hidden" data-mutant="2">&gt;</span><span class="stryker-original-code" data-mutant="1"><span class="stryker-original-code" data-mutant="2"><span class="bg-success-light">&gt;=</span></span></span><span class="bg-success-light"> 30;
 }</span></span><span class="bg-null">;</span>
 </code></pre></div>
 <div class="col-lg-5"><table class="table table-sm table-hover mutant-table"><thead><tr><th>#</th>
@@ -78,20 +75,20 @@ export const isOldEnough = ({ age }): boolean =&gt; </span><a href="#" class="st
 <td><code>{}</code></td></tr>
 <tr><th>1</th>
 <td>BinaryExpression</td>
-<td>Survived</td>
+<td>Killed</td>
 <td>7
 :
 13</td>
-<td><code>></code></td>
-<td><code>>=</code></td></tr>
+<td><code>>=</code></td>
+<td><code><</code></td></tr>
 <tr><th>2</th>
 <td>BinaryExpression</td>
 <td>Killed</td>
 <td>7
 :
 13</td>
-<td><code>></code></td>
-<td><code><=</code></td></tr></tbody></table></div></div></div></div>
+<td><code>>=</code></td>
+<td><code>></code></td></tr></tbody></table></div></div></div></div>
 <footer>Generated with stryker-html-reporter generator. Visit the 
 <a href="https://stryker-mutator.io" target="_blank">Stryker website</a></footer></div>
 <script src="strykerResources/popper.js/dist/umd/popper.min.js" defer="defer"></script>
