--- a/reports/mutation/html/index.html
+++ b/reports/mutation/html/index.html
@@ -24,43 +24,43 @@
 <th class="rotate rotate-width-70 text-center" style="width: 70px"><div><span>Total undetected</span></div></th>
 <th class="rotate rotate-width-70 text-center" style="width: 70px"><div><span>Total mutants</span></div></th></tr></thead>
 <tbody><tr><td>All files</td>
-<td><div class="progress"><div class="progress-bar bg-warning" role="progressbar" aria-valuenow="60.00" aria-valuemin="0" aria-valuemax="100" style="width: 60.00%;">60.00
+<td><div class="progress"><div class="progress-bar bg-success" role="progressbar" aria-valuenow="90.00" aria-valuemin="0" aria-valuemax="100" style="width: 90.00%;">90.00
 %</div></div></td>
-<th class="text-center text-warning" style="width: 10%">60.00</th>
-<td class="text-center">6</td>
-<td class="text-center">4</td>
-<td class="text-center">0</td>
-<td class="text-center">0</td>
-<td class="text-center">0</td>
-<td class="text-center">0</td>
-<th class="text-center">6</th>
-<th class="text-center">4</th>
-<th class="text-center">10</th></tr>
-<tr><td>&nbsp;&nbsp;<a href="src2/sample-module/index.html">src2/sample-module/</a></td>
-<td><div class="progress"><div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50.00" aria-valuemin="0" aria-valuemax="100" style="width: 50.00%;">50.00
-%</div></div></td>
-<th class="text-center text-danger" style="width: 10%">50.00</th>
-<td class="text-center">3</td>
-<td class="text-center">3</td>
-<td class="text-center">0</td>
-<td class="text-center">0</td>
-<td class="text-center">0</td>
-<td class="text-center">0</td>
-<th class="text-center">3</th>
-<th class="text-center">3</th>
-<th class="text-center">6</th></tr>
-<tr><td>&nbsp;&nbsp;<a href="src/sample-module/sample.ts.html">src/sample-module/sample.ts</a></td>
-<td><div class="progress"><div class="progress-bar bg-warning" role="progressbar" aria-valuenow="66.67" aria-valuemin="0" aria-valuemax="100" style="width: 66.67%;">66.67
-%</div></div></td>
-<th class="text-center text-warning" style="width: 10%">66.67</th>
-<td class="text-center">2</td>
+<th class="text-center text-success" style="width: 10%">90.00</th>
+<td class="text-center">9</td>
 <td class="text-center">1</td>
 <td class="text-center">0</td>
 <td class="text-center">0</td>
 <td class="text-center">0</td>
 <td class="text-center">0</td>
-<th class="text-center">2</th>
+<th class="text-center">9</th>
 <th class="text-center">1</th>
+<th class="text-center">10</th></tr>
+<tr><td>&nbsp;&nbsp;<a href="src2/sample-module/index.html">src2/sample-module/</a></td>
+<td><div class="progress"><div class="progress-bar bg-success" role="progressbar" aria-valuenow="83.33" aria-valuemin="0" aria-valuemax="100" style="width: 83.33%;">83.33
+%</div></div></td>
+<th class="text-center text-success" style="width: 10%">83.33</th>
+<td class="text-center">5</td>
+<td class="text-center">1</td>
+<td class="text-center">0</td>
+<td class="text-center">0</td>
+<td class="text-center">0</td>
+<td class="text-center">0</td>
+<th class="text-center">5</th>
+<th class="text-center">1</th>
+<th class="text-center">6</th></tr>
+<tr><td>&nbsp;&nbsp;<a href="src/sample-module/sample.ts.html">src/sample-module/sample.ts</a></td>
+<td><div class="progress"><div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%;">100.00
+%</div></div></td>
+<th class="text-center text-success" style="width: 10%">100.00</th>
+<td class="text-center">3</td>
+<td class="text-center">0</td>
+<td class="text-center">0</td>
+<td class="text-center">0</td>
+<td class="text-center">0</td>
+<td class="text-center">0</td>
+<th class="text-center">3</th>
+<th class="text-center">0</th>
 <th class="text-center">3</th></tr>
 <tr><td>&nbsp;&nbsp;<a href="src3/sample-module/sample3.ts.html">src3/sample-module/sample3.ts</a></td>
 <td><div class="progress"><div class="progress-bar bg-success" role="progressbar" aria-valuenow="100.00" aria-valuemin="0" aria-valuemax="100" style="width: 100.00%;">100.00
